RESOLVED FIXED223447
[iOS] editing/selection/character-granularity-rect.html fails on certain internal configurations after r274610
https://bugs.webkit.org/show_bug.cgi?id=223447
Summary [iOS] editing/selection/character-granularity-rect.html fails on certain inte...
Wenson Hsieh
Reported 2021-03-18 09:38:15 PDT
(More precisely, it fails when the image extraction feature is disabled)
Attachments
Patch (3.56 KB, patch)
2021-03-18 10:26 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-03-18 10:26:36 PDT
Devin Rousso
Comment 2 2021-03-18 10:36:51 PDT
Comment on attachment 423614 [details] Patch rs=me
Wenson Hsieh
Comment 3 2021-03-18 10:50:58 PDT
Comment on attachment 423614 [details] Patch Thanks for the review!
EWS
Comment 4 2021-03-18 11:17:05 PDT
Committed r274653: <https://commits.webkit.org/r274653> All reviewed patches have been landed. Closing bug and clearing flags on attachment 423614 [details].
Radar WebKit Bug Importer
Comment 5 2021-03-18 11:18:18 PDT
Note You need to log in before you can comment on or make changes to this bug.